관리자-원가관리표-연동

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -5990,10 +5990,10 @@
                         <col style="width:50px;"><!-- 구분 -->
                         <col style="width:160px;"><!-- 품명 -->
                         <col style="width:auto;"><!-- 상세내용 (나머지 공간) -->
-                        <col style="width:40px;"><!-- 단위 -->
-                        <col style="width:40px;"><!-- 수량 -->
-                        <col style="width:65px;"><!-- 단가 -->
-                        <col style="width:75px;"><!-- 합계 -->
+                        <col style="width:55px;"><!-- 단위 -->
+                        <col style="width:45px;"><!-- 수량 -->
+                        <col style="width:70px;"><!-- 단가 -->
+                        <col style="width:80px;"><!-- 합계 -->
                     </colgroup>
                     <thead>
                         <tr>
@@ -6992,7 +6992,7 @@
                 '확장/단열공사': '04', '확장': '04', '단열': '04',
                 '창호공사': '05', '창호': '05', '샤시': '05', '샷시': '05',
                 '전기/조명공사': '06', '전기': '06', '조명': '06', '콘센트': '06',
-                '에어컨공사': '07', '에어컨': '07',
+                '에어컨공사': '07', '에어컨 공사': '07', '에어컨': '07',
                 '목공/도어공사': '08', '목공': '08', '도어': '08', '몰딩': '08', '걸레받이': '08',
                 '필름공사': '09', '필름': '09', '인테리어필름': '09',
                 '타일공사': '10', '타일': '10',
