--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -6907,6 +6907,21 @@
                         loadCount++;
                     });
 
+                    // 메모 데이터 처리
+                    if (result.memos && typeof result.memos === 'object') {
+                        Object.keys(result.memos).forEach(categoryName => {
+                            const catNo = mapCategoryToNo(categoryName);
+                            if (catNo && result.memos[categoryName] && result.memos[categoryName].length > 0) {
+                                // 메모 배열을 줄 단위 텍스트로 변환
+                                const memoLines = result.memos[categoryName]
+                                    .map(m => m.content || '')
+                                    .filter(line => line.trim())
+                                    .join('\n');
+                                globalCostData[`costMemo_${catNo}`] = memoLines;
+                            }
+                        });
+                    }
+
                     // localStorage에 저장
                     localStorage.setItem('dz_global_cost', JSON.stringify(globalCostData));
 
