--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -6731,25 +6731,22 @@
 
         // 원가관리표 메모를 계약견적서에 동기화
         function syncCostMemoToEstimate() {
-            // 고객별 메모가 저장되어 있으면 그것을 사용
-            // 저장된 메모가 없으면 현재 화면의 원가관리표 메모를 사용
+            // 원가관리표 메모를 기본값으로 사용 (항상 표시)
+            // 고객별 메모가 별도로 저장되어 있으면 그것을 추가로 표시
+
+            const globalCostData = JSON.parse(localStorage.getItem('dz_global_cost') || '{}');
 
             categories.forEach(cat => {
                 const estMemoTextarea = document.getElementById(`estMemoText${cat.no}`);
                 const costMemoTextarea = document.getElementById(`costMemo${cat.no}`);
 
                 if (estMemoTextarea) {
-                    // 고객별 저장된 메모가 있으면 사용
-                    const customerMemo = currentData[`estMemo_${cat.no}`];
+                    // 원가관리표 메모 (기본값으로 항상 표시)
+                    const costMemo = globalCostData[`costMemo_${cat.no}`] ||
+                        (costMemoTextarea ? costMemoTextarea.value : '') || '';
 
-                    if (customerMemo !== undefined) {
-                        // 고객별로 저장된 메모가 있으면 그것 사용
-                        estMemoTextarea.value = customerMemo;
-                    } else {
-                        // 저장된 메모가 없으면 현재 화면의 원가관리표 메모 사용
-                        const costMemo = costMemoTextarea ? costMemoTextarea.value : '';
-                        estMemoTextarea.value = costMemo;
-                    }
+                    // 항상 원가관리표 메모 표시
+                    estMemoTextarea.value = costMemo;
                     autoResizeTextarea(estMemoTextarea);
                 }
             });
@@ -6912,10 +6909,11 @@
                         Object.keys(result.memos).forEach(categoryName => {
                             const catNo = mapCategoryToNo(categoryName);
                             if (catNo && result.memos[categoryName] && result.memos[categoryName].length > 0) {
-                                // 메모 배열을 줄 단위 텍스트로 변환
+                                // 메모 배열을 줄 단위 텍스트로 변환 (앞에 동그라미 추가)
                                 const memoLines = result.memos[categoryName]
                                     .map(m => m.content || '')
                                     .filter(line => line.trim())
+                                    .map(line => '• ' + line)
                                     .join('\n');
                                 globalCostData[`costMemo_${catNo}`] = memoLines;
                             }
